test: 64 tests without docker passed